--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -92,27 +92,28 @@ nav{
 
 .Hero-content h1{
     color: white;
-    font-size: 64px;
+    font-size: 59px;
     font-family: "Poppins", sans-serif;
     text-align: center;
     font-style: normal;
     font-weight: 600;
-    
-
 }
 
+.Hero-content img{
+    width: 950px;
+}
 
 .paragraph p{
     color: white;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     font-family: "Inter", sans-serif;
 
 }
 
 .paragraph {
     display: flex;
-    width: 920px;
+    width: 780px;
     padding: 20px 24px;
     justify-content: center;
     align-items: center;
