--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body{
+    margin: 0;
+  
+}
 .about-heading{
     width: 100%;
     display: flex;
@@ -9,7 +15,7 @@
     color: #FFF;
     text-align: center;
     font-family: Poppins;
-    font-size: 130px;
+    font-size: 110px;
     font-style: normal;
     font-weight: 600;
     line-height: 101.79%; /* 193.401px */
